--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,7 @@
   },
   "devDependencies": {
     "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "lerna": "^3.4.3",
-    "sequelize-cli": "^5.4.0"
+    "cz-conventional-changelog": "^2.1.0"
   },
   "config": {
     "commitizen": {
