--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,29 @@
   "name": "eshopy",
   "private": true,
   "scripts": {
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "start:dev": "nodemon src/index.ts",
+    "build": "tsc -p tsconfig.json"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.0",
+    "@types/node": "^11.12.0",
     "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0"
+    "cz-conventional-changelog": "^2.1.0",
+    "nodemon": "^1.18.10",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000"
   },
   "config": {
     "commitizen": {
       "path": "./server/node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^7.0.0",
+    "pg": "^7.9.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.16"
   }
 }
