--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "ts-node": "^8.0.3",
+    "tsconfig-paths": "^3.8.0",
     "typescript": "^3.3.4000"
   },
   "config": {
