--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
