--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start:prod": "cross-env NODE_ENV=production node build/index.js",
     "migration:dev": "cross-env NODE_ENV=development ts-node run-migrations.ts",
     "migration:prod": "cross-env NODE_ENV=production ts-node run-migrations.ts",
-    "build": "tsc -p tsconfig.json"
+    "migration:test": "cross-env NODE_ENV=test ts-node run-migrations.ts",
+    "build": "tsc -p tsconfig.json",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -16,6 +18,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/helmet": "0.0.43",
+    "@types/jest": "^24.0.11",
     "@types/morgan": "^1.7.35",
     "@types/node": "^11.12.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
@@ -27,8 +30,10 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.0.3",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.3.4000"
