--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
+    "@types/faker": "^4.1.5",
     "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.11",
     "@types/morgan": "^1.7.35",
     "@types/node": "^11.12.0",
+    "@types/supertest": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "commitizen": "^3.0.7",
@@ -30,9 +32,11 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "faker": "^4.1.0",
     "jest": "^24.7.1",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
+    "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.0.3",
     "tsconfig-paths": "^3.8.0",
