--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "migration:test": "cross-env NODE_ENV=test ts-node run-migrations.ts",
     "build": "tsc -p tsconfig.json",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
-    "lint": "tslint -c tslint.json src/**/*.ts"
+    "lint": "tslint -c tslint.json src/**/*.ts",
+    "lint-staged": "lint-staged"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -27,7 +28,9 @@
     "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
     "faker": "^4.1.0",
+    "husky": "^1.3.1",
     "jest": "^24.7.1",
+    "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "supertest": "^4.0.2",
