--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "migration:test": "cross-env NODE_ENV=test ts-node run-migrations.ts",
     "build": "tsc -p tsconfig.json",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
+    "test:ci": "cross-env NODE_ENV=test jest --ci --detectOpenHandles",
     "lint": "tslint -c tslint.json src/**/*.ts"
   },
   "devDependencies": {
